--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = None"
+    "palermo = None\n",
+    "palermo = "
    ]
   },
   {
