Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,8 @@
    "outputs": [],
    "source": [
     "palermo = None\n",
-    "palermo = "
+    "palermo = neighborhoods[0]\n",
+    "palermo"
    ]
   },
   {
