--- a/index.ipynb
+++ b/index.ipynb
@@ -74,9 +74,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Palermo'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "palermo = None\n",
     "palermo = neighborhoods[0]\n",
@@ -96,7 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None"
+    "la_boca = None\n",
+    "la_boc"
    ]
   },
   {
