--- a/index.ipynb
+++ b/index.ipynb
@@ -107,8 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = None\n",
-    "la_boc"
+    "la_boca = None[-1]\n",
+    "la_boca = neighborhoods"
    ]
   },
   {
