--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "ba_latitude = None\n",
-    "ba_latatide "
+    "ba_latitude = coordinates(0)"
    ]
   },
   {
