Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,8 @@
    ],
    "source": [
     "!pip install folium\n",
-    "!pip"
+    "!pip install bz2file\n",
+    "!pip install"
    ]
   },
   {
