--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,27 +214,41 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: folium in /opt/conda/envs/learn-env/lib/python3.6/site-packages (0.8.2)\n",
-      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (1.11.0)\n",
-      "Requirement already satisfied: jinja2 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (2.10)\n",
       "Requirement already satisfied: branca>=0.3.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (0.3.1)\n",
+      "Requirement already satisfied: jinja2 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (2.10)\n",
       "Requirement already satisfied: numpy in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (1.16.2)\n",
       "Requirement already satisfied: requests in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (2.19.1)\n",
+      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from folium) (1.11.0)\n",
       "Requirement already satisfied: MarkupSafe>=0.23 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from jinja2->folium) (1.1.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from requests->folium) (2018.8.13)\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from requests->folium) (3.0.4)\n",
       "Requirement already satisfied: urllib3<1.24,>=1.21.1 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from requests->folium) (1.23)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from requests->folium) (2018.8.13)\n",
       "Requirement already satisfied: idna<2.8,>=2.5 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from requests->folium) (2.7)\n",
       "\u001b[31msmart-open 1.8.0 requires bz2file, which is not installed.\u001b[0m\n",
       "\u001b[31mnltk 3.4 requires singledispatch, which is not installed.\u001b[0m\n",
       "\u001b[33mYou are using pip version 10.0.1, however version 19.0.3 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting bz2file\n",
+      "  Downloading https://files.pythonhosted.org/packages/61/39/122222b5e85cd41c391b68a99ee296584b2a2d1d233e7ee32b4532384f2d/bz2file-0.98.tar.gz\n",
+      "Building wheels for collected packages: bz2file\n",
+      "  Running setup.py bdist_wheel for bz2file ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/pleasant-constraint-7596/.cache/pip/wheels/81/75/d6/e1317bf09bf1af5a30befc2a007869fa6e1f516b8f7c591cb9\n",
+      "Successfully built bz2file\n",
+      "\u001b[31mnltk 3.4 requires singledispatch, which is not installed.\u001b[0m\n",
+      "Installing collected packages: bz2file\n",
+      "Successfully installed bz2file-0.98\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Collecting singledispatch\n",
+      "  Downloading https://files.pythonhosted.org/packages/c5/10/369f50bcd4621b263927b0a1519987a04383d4a98fb10438042ad410cf88/singledispatch-3.4.0.3-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from singledispatch) (1.11.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install folium\n",
     "!pip install bz2file\n",
-    "!pip install"
+    "!pip install singledispatch"
    ]
   },
   {
