--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,11 @@
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Collecting singledispatch\n",
       "  Downloading https://files.pythonhosted.org/packages/c5/10/369f50bcd4621b263927b0a1519987a04383d4a98fb10438042ad410cf88/singledispatch-3.4.0.3-py2.py3-none-any.whl\n",
-      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from singledispatch) (1.11.0)\n"
+      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from singledispatch) (1.11.0)\n",
+      "Installing collected packages: singledispatch\n",
+      "Successfully installed singledispatch-3.4.0.3\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
