--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca"
+    "la_boca_marker = neighborhood"
    ]
   },
   {
