--- a/index.ipynb
+++ b/index.ipynb
@@ -477,7 +477,8 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca_marker = neighborhood_markers"
+    "la_boca_marker = neighborhood_markers[-1]\n",
+    "la_boca_marker"
    ]
   },
   {
