Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -585,7 +585,8 @@
    "outputs": [],
    "source": [
     "recoleta_marker = None\n",
-    "recoleta_marker = neighborhood_"
+    "recoleta_marker = neighborhood_markers[1]\n",
+    "recole"
    ]
   },
   {
